--- a/index.html
+++ b/index.html
@@ -5,36 +5,52 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./reset.css">
+  <link rel="stylesheet" href="./styles.css">
   <title>Frontend Mentor | Four card feature section</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+
   </style>
 </head>
-<body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+<body>  
+  <main>
+    <div class="header">
+      <h1 class="firsttitle">Reliable, efficient delivery</h1>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
-
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  
+      <h1 class="secondtittle">Powered by Technology</h1>
+      <p>
+        Our Artificial Intelligence powered tools use millions of project data <br>
+         points to ensure that your project is successful
+      </p>
+    </div>
+    <div class="card-supervisor">
+      <h2>Supervisor</h2>
+      <p>
+        Monitors activity to identify project <br> roadblocks
+      </p>
+      <img src="./images/icon-supervisor.svg" alt="Karma">
+    </div>
+    <div class="card-teambuilder">
+      <h2>Team Builder</h2>
+      <p>
+        Scans our talent network to create the optimal team for your project
+      </p>
+      <img src="./images/icon-team-builder.svg" alt="Karma">
+    </div>
+    <div class="card-karma">
+      <h2>Karma</h2>
+      <p>Regularly evaluates our talent to ensure quality</p>
+      <img src="./images/icon-karma.svg" alt="Karma">
+    </div>
+    <div class="card-calculator">
+      <h2>Calculator</h2>
+      <p>Uses data from past projects to provide better delivery estimates</p>
+      <img src="./images/icon-calculator.svg" alt="Karma">
+    </div>
+  </main>  
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
